# HSE-Labarotornya-third

./: CMakeLists.txt  README.md  auto_test.cpp  input.txt  lexer.cpp  lexer.h  main.cpp  node.cpp  node.h  parser.cpp  parser.h  reader_files.bat  tests.bat
